--- a/outreach.html
+++ b/outreach.html
@@ -63,7 +63,7 @@
     <div class="section">
       <h1>Scientific Outreach and Communication</h1>
       <p>Alongside research and teaching, I am committed to making science accessible, equitable, and engaging for audiences of all ages. 
-      I have developed and led outreach programs that reach K–12 classrooms, public audiences, and online communities. 
+      I have helped to develop, lead and design outreach programs for K–12 classrooms, public audiences, and online communities. 
       My work emphasizes mentorship, equity in STEM, and creating pathways for students who may not otherwise see themselves represented in science.</p>
     </div>
 
