--- a/projects.html
+++ b/projects.html
@@ -85,14 +85,14 @@
       <h2>Undergraduate & Fellowship Research</h2>
       <ul>
         <li><strong>Postpartum Depression & Neuroinflammation</strong> — CAMH (2025)  
-          <p>Studied behavioural and neural changes in rodent models of postpartum depression. Combined pharmacological interventions (SSRIs, cytokine blockade) with behavioural assays. Results presented as a poster at CAMH conference.</p>
+          <p>Studied behavioural and neural changes in rodent models of postpartum depression. Combined pharmacological interventions (SSRIs) with behavioural assays. Results presented as a poster at CAMH and University of Toronto conference.</p>
         </li>
         <li><strong>Metacommunity Biodiversity Models</strong> — McMaster University (2024–2025)  
           <p>Built agent-based models in NetLogo and Python to test how patch size and connectivity influence biodiversity. Presented findings at Ontario Biology Day, McMaster Symposium, and WISE Conference.</p>
           <a class="pill" href="https://github.com/erinstar">Code on GitHub</a>
         </li>
         <li><strong>Arabidopsis Immunity</strong> — McMaster University (2023–2024)  
-          <p>Supported research on systemic acquired resistance and age-related resistance. Gained lab skills in RNA extraction, PCR, and pathogen assays.</p>
+          <p>Supported research on systemic acquired resistance and age-related resistance. Gained lab skills in RNA extraction and PCR.</p>
         </li>
         <li><strong>Amphibian Conservation</strong> — Operation Wallacea, Honduras (2023)  
           <p>Conducted amphibian biodiversity surveys and chytrid fungal surveillance in cloud forest ecosystems. Authored a report on fungal emergence threats to amphibian fauna.</p>
@@ -107,7 +107,7 @@
           <p>Created infographics, blog posts, and social media campaigns on equity issues in women’s health and reproductive justice. Supported knowledge mobilization to broader audiences.</p>
         </li>
         <li><strong>Let’s Talk Science Outreach</strong> (2025– )  
-          <p>Organized and led large-scale STEM outreach events, including <em>Science Rendezvous</em> and <em>Let’s Talk Science Challenge</em>. Designed hands-on STEM demos for K–12 classrooms and communities.</p>
+          <p>Organizing and leading large-scale STEM outreach events, including <em>Science Rendezvous</em> and <em>Let’s Talk Science Challenge</em>. Designed hands-on STEM demos for K–12 classrooms and communities.</p>
         </li>
       </ul>
     </div>
