--- a/index.html
+++ b/index.html
@@ -57,14 +57,6 @@
       display:grid; gap:18px;
       grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
     }
-    /* Sidebar image */
-    .side-img{
-      max-width:280px;
-      margin:40px 20px;
-      border-radius:12px;
-      box-shadow:0 4px 12px rgba(0,0,0,0.1);
-      height:auto;
-    }
   </style>
 </head>
 <body>
@@ -128,12 +120,15 @@
         </div>
       </div>
 
-      <div class="section">
-        <h2>Contact</h2>
-        <p>Email (personal): <a href="mailto:erin.ricaloglu@gmail.com">erin.ricaloglu@gmail.com</a></p>
-        <p>Email (student): <a href="mailto:erin.ricaloglu@mail.utoronto.ca">erin.ricaloglu@mail.utoronto.ca</a></p>
-        <p class="muted">I can provide a full PDF CV on request.</p>
-      </div>
+     <!-- Contact -->
+<div class="section">
+  <h2>Contact</h2>
+  <img src="d59ff7121c21c01576bb5ebd2e6b3d0c.jpg" alt="Genes to Cells cover" 
+       style="width:200px; float:right; margin-left:15px; border-radius:12px;" />
+  <p>Email (personal): <a href="mailto:erin.ricaloglu@gmail.com">erin.ricaloglu@gmail.com</a></p>
+  <p>Email (student): <a href="mailto:erin.ricaloglu@mail.utoronto.ca">erin.ricaloglu@mail.utoronto.ca</a></p>
+  <p class="muted">I can provide a full PDF CV on request.</p>
+</div>
     </main>
   </div>
 
