--- a/index.html
+++ b/index.html
@@ -121,13 +121,14 @@
       </div>
 
      <!-- Contact -->
-<div class="section">
-  <h2>Contact</h2>
-  <img src="d59ff7121c21c01576bb5ebd2e6b3d0c.jpg" alt="Genes to Cells cover" 
-       style="width:200px; float:right; margin-left:15px; border-radius:12px;" />
-  <p>Email (personal): <a href="mailto:erin.ricaloglu@gmail.com">erin.ricaloglu@gmail.com</a></p>
-  <p>Email (student): <a href="mailto:erin.ricaloglu@mail.utoronto.ca">erin.ricaloglu@mail.utoronto.ca</a></p>
-  <p class="muted">I can provide a full PDF CV on request.</p>
+<div class="section contact-box">
+  <div class="contact-text">
+    <h2>Contact</h2>
+    <p>Email (personal): <a href="mailto:erin.ricaloglu@gmail.com">erin.ricaloglu@gmail.com</a></p>
+    <p>Email (student): <a href="mailto:erin.ricaloglu@mail.utoronto.ca">erin.ricaloglu@mail.utoronto.ca</a></p>
+    <p class="muted">I can provide a full PDF CV on request.</p>
+  </div>
+  <img src="d59ff7121c21c01576bb5ebd2e6b3d0c.jpg" alt="Genes to Cells cover" />
 </div>
     </main>
   </div>
