--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   <title>Erin Ricaloglu — Home</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
+    /* 🌸 Cute pastel theme to match cv.html */
     :root{
-      --bg1:#fdfbfb; --bg2:#f3e7e9;
+      --bg1:#fdfbfb; --bg2:#f3e7e9; /* blush gradient */
       --ink:#333;
-      --accent:#6a4c93;
-      --accent-2:#d45d79;
+      --accent:#6a4c93;  /* lavender plum */
+      --accent-2:#d45d79;/* rose */
       --card:#ffffffdd;
       --line:#e8d6eb;
       --pill:#fce7f3;
@@ -20,8 +21,8 @@
       margin:0; font-family:"Helvetica Neue", Arial, sans-serif;
       background:linear-gradient(180deg,var(--bg1),var(--bg2));
       color:var(--ink); line-height:1.7;
-      display:flex; justify-content:center;
     }
+    /* Header / Nav */
     header{
       position:sticky; top:0; z-index:10;
       background:#fff0f5cc; backdrop-filter:blur(8px);
@@ -35,7 +36,8 @@
     .nav a{ color:var(--accent); text-decoration:none; font-weight:500; transition:.15s }
     .nav a:hover{ color:var(--accent-2) }
     .spacer{ margin-left:auto; color:#a78bfa; font-size:.95rem }
-    main{ max-width:900px; margin:40px 20px; }
+    /* Layout */
+    main{ max-width:900px; margin:40px auto; padding:0 20px }
     .section{
       background:var(--card);
       border:1px solid var(--line);
@@ -57,81 +59,96 @@
       display:grid; gap:18px;
       grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
     }
+
+    /* Contact box image */
+    .contact-box {
+      display: flex;
+      align-items: flex-start;
+      justify-content: space-between;
+    }
+
+    .contact-box img {
+      width: 150px;   /* keeps image small */
+      height: auto;   /* keeps proportions */
+      border-radius: 12px;
+      margin-left: 20px;
+      flex-shrink: 0;
+    }
   </style>
 </head>
 <body>
-  <div>
-    <header>
-      <nav class="nav">
-        <strong>Erin Ricaloglu</strong>
-        <a href="index.html">About</a>
-        <a href="cv.html">CV</a>
-        <a href="teaching.html">Teaching</a>
-        <a href="outreach.html">Outreach</a>
-        <a href="projects.html">Projects</a>
-        <span class="spacer">Toronto, ON</span>
-      </nav>
-    </header>
+  <header>
+    <nav class="nav">
+      <strong>Erin Ricaloglu</strong>
+      <a href="index.html">About</a>
+      <a href="cv.html">CV</a>
+      <a href="teaching.html">Teaching</a>
+      <a href="outreach.html">Outreach</a>
+      <a href="projects.html">Projects</a>
+      <span class="spacer">Toronto, ON</span>
+    </nav>
+  </header>
 
-    <main>
+  <main>
+    <!-- Intro -->
+    <div class="section">
+      <h1>Hi, I’m Erin ✿</h1>
+      <p>I’m a PhD student in Behavioural Neuroscience at the University of Toronto. 
+         I’m broadly interested in neuroepigenetics, chromatin biology, and how molecular changes relate to cognition, behaviour and the development of Alzheimer's Disease. 
+         I also care deeply about teaching, mentorship, and making science welcoming for everyone.</p>
+      <div>
+        <a class="pill" href="cv.html">View CV</a>
+        <a class="pill" href="outreach.html">Outreach & Sci Comm</a>
+        <a class="pill" href="projects.html">Research Projects</a>
+        <a class="pill" href="teaching.html">Teaching</a>
+        <a class="pill" href="mailto:erin.ricaloglu@gmail.com">Email me</a>
+        <a class="pill" href="https://github.com/erinstar">GitHub</a>
+        <a class="pill" href="https://www.linkedin.com/in/erinricaloglu">LinkedIn</a>        
+        <a class="pill" href="https://readingonastar.ca/">Blog</a>
+      </div>
+    </div>
+
+    <!-- Quick Highlights -->
+    <div class="section">
+      <h2>What you’ll find here</h2>
+      <ul class="list">
+        <li><strong>CV:</strong> education, research, awards, and skills (PDF available on request).</li>
+        <li><strong>Teaching:</strong> courses I support and my mentorship approach.</li>
+        <li><strong>Outreach:</strong> program leadership, equity-focused communication, and K–12 engagement.</li>
+        <li><strong>Projects:</strong> selected research summaries with links to code on GitHub.</li>
+      </ul>
+      <p class="muted">If you’re a student or collaborator, please reach out — I’m happy to chat.</p>
+    </div>
+
+    <!-- Featured Cards -->
+    <div class="grid">
       <div class="section">
-        <h1>Hi, I’m Erin ✿</h1>
-        <p>I’m a PhD student in Behavioural Neuroscience at the University of Toronto. 
-           I’m broadly interested in neuroepigenetics, chromatin biology, and how molecular changes relate to cognition, behaviour and the development of Alzheimer's Disease. 
-           I also care deeply about teaching, mentorship, and making science welcoming for everyone.</p>
-        <div>
-          <a class="pill" href="cv.html">View CV</a>
-          <a class="pill" href="outreach.html">Outreach & Sci Comm</a>
-          <a class="pill" href="projects.html">Research Projects</a>
-          <a class="pill" href="teaching.html">Teaching</a>
-          <a class="pill" href="mailto:erin.ricaloglu@gmail.com">Email me</a>
-          <a class="pill" href="https://github.com/erinstar">GitHub</a>
-          <a class="pill" href="https://www.linkedin.com/in/erinricaloglu">LinkedIn</a>        
-          <a class="pill" href="https://readingonastar.ca/">Blog</a>
-        </div>
+        <h2>Latest</h2>
+        <p>Settling into doctoral research and continuing science communication & outreach across the GTA.</p>
+        <a class="pill" href="projects.html">See projects →</a>
       </div>
-
       <div class="section">
-        <h2>What you’ll find here</h2>
-        <ul class="list">
-          <li><strong>CV:</strong> education, research, awards, and skills (PDF available on request).</li>
-          <li><strong>Teaching:</strong> courses I support and my mentorship approach.</li>
-          <li><strong>Outreach:</strong> program leadership, equity-focused communication, and K–12 engagement.</li>
-          <li><strong>Projects:</strong> selected research summaries with links to code on GitHub.</li>
-        </ul>
-        <p class="muted">If you’re a student or collaborator, please reach out — I’m happy to chat.</p>
+        <h2>Teaching & Mentorship</h2>
+        <p>Inclusive, hands-on teaching with clear connections from theory to everyday life.</p>
+        <a class="pill" href="teaching.html">Teaching page →</a>
       </div>
-
-      <div class="grid">
-        <div class="section">
-          <h2>Latest</h2>
-          <p>Settling into doctoral research and continuing science communication & outreach across the GTA.</p>
-          <a class="pill" href="projects.html">See projects →</a>
-        </div>
-        <div class="section">
-          <h2>Teaching & Mentorship</h2>
-          <p>Inclusive, hands-on teaching with clear connections from theory to everyday life.</p>
-          <a class="pill" href="teaching.html">Teaching page →</a>
-        </div>
-        <div class="section">
-          <h2>Outreach</h2>
-          <p>Program leadership (Let’s Talk Science), Sci High classroom talks, and equity-focused communication.</p>
-          <a class="pill" href="outreach.html">Outreach page →</a>
-        </div>
+      <div class="section">
+        <h2>Outreach</h2>
+        <p>Program leadership (Let’s Talk Science), Sci High classroom talks, and equity-focused communication.</p>
+        <a class="pill" href="outreach.html">Outreach page →</a>
       </div>
+    </div>
 
-     <!-- Contact -->
-<div class="section contact-box">
-  <div class="contact-text">
-    <h2>Contact</h2>
-    <p>Email (personal): <a href="mailto:erin.ricaloglu@gmail.com">erin.ricaloglu@gmail.com</a></p>
-    <p>Email (student): <a href="mailto:erin.ricaloglu@mail.utoronto.ca">erin.ricaloglu@mail.utoronto.ca</a></p>
-    <p class="muted">I can provide a full PDF CV on request.</p>
-  </div>
-  <img src="d59ff7121c21c01576bb5ebd2e6b3d0c.jpg" alt="Genes to Cells cover" />
-</div>
-    </main>
-  </div>
-
+    <!-- Contact -->
+    <div class="section contact-box">
+      <div>
+        <h2>Contact</h2>
+        <p>Email (personal): <a href="mailto:erin.ricaloglu@gmail.com">erin.ricaloglu@gmail.com</a></p>
+        <p>Email (student): <a href="mailto:erin.ricaloglu@mail.utoronto.ca">erin.ricaloglu@mail.utoronto.ca</a></p>
+        <p class="muted">I can provide a full PDF CV on request.</p>
+      </div>
+      <img src="d59ff7121c21c01576bb5ebd2e6b3d0c.jpg" alt="Genes to Cells cover" />
+    </div>
+  </main>
 </body>
 </html>
