--- a/outreach.html
+++ b/outreach.html
@@ -80,7 +80,7 @@
         </li>
 
         <li>
-          <strong>Sci High Graduate Communicator</strong>, GTA (2025)  
+          <strong>Sci High Graduate Communicator</strong>, GTA (2025-)  
           <p>Delivered interactive classroom talks on molecular biology and genetics to high school students. 
           Focused on making research concepts approachable, inspiring students to engage with university-level science, 
           and encouraging equity and representation in STEM pathways.</p>
@@ -94,7 +94,7 @@
         </li>
 
         <li>
-          <strong>Communications Assistant</strong>, Women’s Health Research Cluster (2024–2025)  
+          <strong>Communications Assistant</strong>, Women’s Health Research Cluster (2024–)  
           <p>Created accessible science communication materials to highlight equity issues in women’s health and reproductive justice. 
           Produced infographics and social media content, translating research for both academic and general audiences. 
           Supported knowledge mobilization initiatives that promote diverse perspectives in health research and advocate for systemic change.</p>
