--- a/index.html
+++ b/index.html
@@ -133,10 +133,11 @@
         <a class="pill" href="teaching.html">Teaching page →</a>
       </div>
       <div class="section">
-        <h2>Outreach</h2>
-        <p>Program leadership (Let’s Talk Science), Sci High classroom talks, and equity-focused communication.</p>
-        <a class="pill" href="outreach.html">Outreach page →</a>
-      </div>
+  <h2>Outreach</h2>
+  <p>Program leadership (Let’s Talk Science), Sci High classroom talks, and equity-focused communication. 
+     Experience as a mentor and judge at youth science and innovation events, including NASA Space Apps Challenge and UHN’s STAR Program.</p>
+  <a class="pill" href="outreach.html">Outreach page →</a>
+</div>
     </div>
 
     <!-- Contact -->
