--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
     <!-- Intro -->
     <div class="section">
       <h1>Hi, I’m Erin ✿</h1>
-      <p>I’m a PhD student in Behavioural Neuroscience at the University of Toronto. 
-         I’m broadly interested in neuroepigenetics, chromatin biology, and how molecular changes relate to cognition, behaviour and the development of Alzheimer's Disease. 
-         I also care deeply about teaching, mentorship, and making science welcoming for everyone.</p>
+      <p> I am a PhD student in Behavioural Neuroscience at the University of Toronto, where my research examines how epigenetic and chromatin-based mechanisms regulate gene expression in hippocampal neurons and contribute to early cellular dysfunction in Alzheimer’s disease. 
+        I focus on histone variant regulation and lysosomal pathways to understand how long-lasting molecular changes in the brain influence neuronal vulnerability and memory-related outcomes. 
+        Through this work, I aim to bridge molecular neuroscience and behaviour by identifying early regulatory mechanisms that shape disease progression. Beyond science, I am passionate about women's health, writing, and mentoring! </p>
       <div>
         <a class="pill" href="cv.html">View CV</a>
         <a class="pill" href="outreach.html">Outreach & Sci Comm</a>
