--- a/cv.html
+++ b/cv.html
@@ -115,6 +115,8 @@
     <div class="section">
       <h2>Awards & Recognition</h2>
       <ul>
+        
+        <li>Psychological and Brain Sciences Graduate Conference Award (2026)</li>
         <li>BioTalent Canada Student Award (2025)</li>
         <li>Undergraduate Research Travel Award — McMaster University (2025)</li>
         <li>Dean’s Honour List (multiple years)</li>
@@ -125,8 +127,8 @@
     <div class="section">
       <h2>Skills</h2>
       <ul>
-        <li><strong>Experimental:</strong> PCR, RNA/DNA extraction, immunohistochemistry, rodent behavioural assays, neuroimaging</li>
-        <li><strong>Animal Handling:</strong> (In training) Rodent Surgery, Colony Management, Primates </li>
+        <li><strong>Experimental:</strong> PCR, RNA/DNA extraction, Chip-seq (training), western blotting, immunohistochemistry, rodent behavioural assays, neuroimaging</li>
+        <li><strong>Animal Handling:</strong> Rodent Surgery, Colony Management, Primates </li>
         <li><strong>Computational:</strong> Python, R, NetLogo, data visualization, basic bioinformatics </li>
         <li><strong>Professional:</strong> teaching, mentoring, program coordination, science communication, outreach leadership</li>
       </ul>
