--- a/teaching.html
+++ b/teaching.html
@@ -59,6 +59,7 @@
     <div class="section">
       <h2>Mentorship</h2>
       <ul>
+        <li><strong>Brain Bee Judge</strong>, UTM (2026) — Assessed high school students on undergraduate-level neuroscience knowledge and skills. </li>
         <li><strong>Graduate Judge</strong>, STAR Program (2025) — Evaluated undergraduate research posters, providing constructive feedback on clarity, analysis, and presentation skills.</li>
         <li><strong>STEM Mentor</strong>, Letters to a Pre-Scientist (2024– ) — Long-term pen-pal mentorship with middle school students in underserved communities, encouraging representation and confidence in STEM pathways.</li>
       </ul>
