--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <a class="pill" href="outreach.html">Outreach & Sci Comm</a>
         <a class="pill" href="projects.html">Research Projects</a>
         <a class="pill" href="teaching.html">Teaching</a>
-        <a class="pill" href="mailto:erin.ricaloglu@gmail.com">Email me</a>
+        <a class="pill" href="mailto:erin.ricaloglu@utoronto.ca">Email me</a>
         <a class="pill" href="https://github.com/erinstar">GitHub</a>
         <a class="pill" href="https://www.linkedin.com/in/erinricaloglu">LinkedIn</a>        
         <a class="pill" href="https://readingonastar.ca/">Blog</a>
@@ -145,7 +145,7 @@
       <div>
         <h2>Contact</h2>
         <p>Email (personal): <a href="mailto:erin.ricaloglu@gmail.com">erin.ricaloglu@gmail.com</a></p>
-        <p>Email (student): <a href="mailto:erin.ricaloglu@mail.utoronto.ca">erin.ricaloglu@mail.utoronto.ca</a></p>
+        <p>Email (student): <a href="mailto:erin.ricaloglu@utoronto.ca">erin.ricaloglu@mail.utoronto.ca</a></p>
         <p class="muted">I can provide a full PDF CV on request.</p>
       </div>
       <img src="d59ff7121c21c01576bb5ebd2e6b3d0c.jpg" alt="Genes to Cells cover" />
