--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
     h1,h2{ margin:0 0 10px; color:var(--accent) }
     p{ margin:8px 0 }
     ul{ padding-left:20px; margin:0 }
-    li{ margin-bottom:18px }
+    li{ margin-bottom:22px }
     .pill{
       display:inline-block; padding:8px 14px; margin:6px 8px 0 0;
       background:var(--pill); border-radius:999px; color:var(--accent);
@@ -50,6 +50,7 @@
     .muted{ color:var(--sub) }
   </style>
 </head>
+
 <body>
   <header>
     <nav class="nav">
@@ -64,59 +65,128 @@
   </header>
 
   <main>
+
+    <!-- INTRO -->
     <div class="section">
       <h1>Projects</h1>
-      <p>This page highlights selected academic research and communication projects. For code and data pipelines, see my <a href="https://github.com/erinstar" target="_blank">GitHub</a> ✿</p>
+      <p>
+        This page highlights selected research projects that reflect my interests in neuroepigenetics,
+        chromatin biology, and mechanisms of neuronal vulnerability in disease. Together, these projects
+        span molecular neuroscience, genomics, behavior, and computational modeling.
+        For code and analysis pipelines, see my
+        <a href="https://github.com/erinstar" target="_blank">GitHub</a>.
+      </p>
     </div>
 
+    <!-- DOCTORAL RESEARCH -->
     <div class="section">
       <h2>Doctoral Research</h2>
       <ul>
-        <li><strong>Epigenetic Regulation of Memory</strong> — University of Toronto (2025– )  
-          <p>PhD project exploring how histone variant exchange and chromatin remodeling shape memory-associated gene expression. Uses rodent behavioural models, molecular assays, and genomic tools to investigate mechanisms relevant to Alzheimer’s disease.</p>
-        </li>
-        <li><strong>Lysosomal Biology & Neurodegeneration</strong>  
-          <p>Investigating how lysosome abundance and function interact with synaptic plasticity and cognition. Integrates molecular neuroscience and cellular clearance pathways.</p>
+        <li>
+          <strong>Epigenetic Regulation of Lysosomal Function and Memory in Alzheimer’s Disease</strong>
+          — University of Toronto (2025– )
+          <p>
+            My PhD research investigates how histone variant–mediated chromatin regulation shapes
+            lysosomal gene expression and neuronal vulnerability in Alzheimer’s disease. I focus on the
+            histone variant <em>macroH2A1</em> as a potential regulator of long-term transcriptional programs
+            that support lysosomal function in hippocampal neurons.
+          </p>
+          <p>
+            Using a combination of chromatin profiling (ChIP-seq), transcriptomics (RNA-seq),
+            viral manipulation in vivo, and lysosomal functional assays, I examine how epigenetic
+            dysregulation may contribute to early cellular dysfunction preceding overt neurodegeneration.
+            This work integrates molecular, cellular, and behavioral approaches to link chromatin state
+            to memory-relevant outcomes.
+          </p>
+          <p class="muted">
+            Core methods: ChIP-seq, RNA-seq, AAV-mediated gene manipulation, confocal microscopy,
+            lysosomal pH and proteolysis assays, rodent behavioral models.
+          </p>
         </li>
       </ul>
     </div>
 
+    <!-- PRIOR RESEARCH -->
     <div class="section">
       <h2>Undergraduate & Fellowship Research</h2>
       <ul>
-        <li><strong>Postpartum Depression & Neuroinflammation</strong> — CAMH (2025)  
-          <p>Studied behavioural and neural changes in rodent models of postpartum depression. Combined pharmacological interventions (SSRIs) with behavioural assays. Results presented as a poster at CAMH and University of Toronto conference.</p>
+        <li>
+          <strong>Postpartum Depression, Neuroinflammation, and Antidepressant Response</strong>
+          — CAMH (2025)
+          <p>
+            Conducted independent research on neuroimmune mechanisms underlying postpartum depression
+            in rodent models, examining how inflammatory signaling interacts with SSRI treatment efficacy.
+            Combined behavioral assays with immunohistochemistry to assess microglial plasticity and
+            brain-region–specific effects.
+          </p>
         </li>
-        <li><strong>Metacommunity Biodiversity Models</strong> — McMaster University (2024–2025)  
-          <p>Built agent-based models in NetLogo and Python to test how patch size and connectivity influence biodiversity. Presented findings at Ontario Biology Day, McMaster Symposium, and WISE Conference.</p>
+
+        <li>
+          <strong>Metacommunity Dynamics in Fragmented Landscapes</strong>
+          — McMaster University (2024–2025)
+          <p>
+            Developed agent-based computational models to test predictions of formal metacommunity theory,
+            focusing on how patch size, connectivity, and species specialization influence biodiversity
+            persistence. This work strengthened my quantitative reasoning and systems-level thinking,
+            which now inform my approach to complex biological networks in neuroscience.
+          </p>
           <a class="pill" href="https://github.com/erinstar">Code on GitHub</a>
         </li>
-        <li><strong>Arabidopsis Immunity</strong> — McMaster University (2023–2024)  
-          <p>Supported research on systemic acquired resistance and age-related resistance. Gained lab skills in RNA extraction and PCR.</p>
+
+        <li>
+          <strong>Plant Immunity and Transcriptional Regulation</strong>
+          — McMaster University (2023–2024)
+          <p>
+            Supported molecular biology research on systemic acquired resistance in
+            <em>Arabidopsis thaliana</em>, gaining experience in RNA extraction, PCR, and experimental
+            design. This work provided early training in transcriptional regulation and host defense
+            mechanisms.
+          </p>
         </li>
-        <li><strong>Amphibian Conservation</strong> — Operation Wallacea, Honduras (2023)  
-          <p>Conducted amphibian biodiversity surveys and chytrid fungal surveillance in cloud forest ecosystems. Authored a report on fungal emergence threats to amphibian fauna.</p>
+
+        <li>
+          <strong>Amphibian Disease Ecology and Conservation</strong>
+          — Operation Wallacea, Honduras (2023)
+          <p>
+            Conducted field-based surveillance of chytrid fungal infections in amphibian populations
+            within cloud forest ecosystems. Authored a report examining disease emergence and conservation
+            risk, contributing to broader efforts to understand pathogen-driven biodiversity loss.
+          </p>
         </li>
       </ul>
     </div>
 
+    <!-- SCIENCE COMMUNICATION -->
     <div class="section">
-      <h2>Science Communication Projects</h2>
+      <h2>Science Communication & Knowledge Translation</h2>
       <ul>
-        <li><strong>Women’s Health Research Cluster</strong> (2024–2025)  
-          <p>Created infographics, blog posts, and social media campaigns on equity issues in women’s health and reproductive justice. Supported knowledge mobilization to broader audiences.</p>
+        <li>
+          <strong>Women’s Health Research Cluster</strong> (2024–2025)
+          <p>
+            Developed accessible science communication materials translating women’s health research
+            for public audiences, with a focus on equity, reproductive justice, and inclusive health
+            research.
+          </p>
         </li>
-        <li><strong>Let’s Talk Science Outreach</strong> (2025– )  
-          <p>Organizing and leading large-scale STEM outreach events, including <em>Science Rendezvous</em> and <em>Let’s Talk Science Challenge</em>. Designed hands-on STEM demos for K–12 classrooms and communities.</p>
+
+        <li>
+          <strong>Let’s Talk Science Outreach</strong> (2025– )
+          <p>
+            Lead and coordinate large-scale STEM outreach initiatives, including Science Rendezvous
+            and the Let’s Talk Science Challenge. Design hands-on neuroscience and biology demonstrations
+            for K–12 classrooms and community audiences.
+          </p>
         </li>
       </ul>
     </div>
 
+    <!-- CONTACT -->
     <div class="section">
       <h2>Get in touch</h2>
       <p>Email (student): <a href="mailto:erin.ricaloglu@mail.utoronto.ca">erin.ricaloglu@mail.utoronto.ca</a></p>
       <p class="muted">Personal: <a href="mailto:erin.ricaloglu@gmail.com">erin.ricaloglu@gmail.com</a></p>
     </div>
+
   </main>
 </body>
 </html>
