--- a/projects.html
+++ b/projects.html
@@ -99,7 +99,7 @@
             to memory-relevant outcomes.
           </p>
           <p class="muted">
-            Core methods: ChIP-seq, RNA-seq, AAV-mediated gene manipulation, confocal microscopy,
+            Core methods: ChIP-seq (in training), RNA-seq (in training), AAV-mediated gene manipulation, confocal microscopy,
             lysosomal pH and proteolysis assays, rodent behavioral models.
           </p>
         </li>
@@ -156,34 +156,10 @@
       </ul>
     </div>
 
-    <!-- SCIENCE COMMUNICATION -->
-    <div class="section">
-      <h2>Science Communication & Knowledge Translation</h2>
-      <ul>
-        <li>
-          <strong>Women’s Health Research Cluster</strong> (2024–2025)
-          <p>
-            Developed accessible science communication materials translating women’s health research
-            for public audiences, with a focus on equity, reproductive justice, and inclusive health
-            research.
-          </p>
-        </li>
-
-        <li>
-          <strong>Let’s Talk Science Outreach</strong> (2025– )
-          <p>
-            Lead and coordinate large-scale STEM outreach initiatives, including Science Rendezvous
-            and the Let’s Talk Science Challenge. Design hands-on neuroscience and biology demonstrations
-            for K–12 classrooms and community audiences.
-          </p>
-        </li>
-      </ul>
-    </div>
-
     <!-- CONTACT -->
     <div class="section">
       <h2>Get in touch</h2>
-      <p>Email (student): <a href="mailto:erin.ricaloglu@mail.utoronto.ca">erin.ricaloglu@mail.utoronto.ca</a></p>
+      <p>Email (student): <a href="mailto:erin.ricaloglu@utoronto.ca">erin.ricaloglu@mail.utoronto.ca</a></p>
       <p class="muted">Personal: <a href="mailto:erin.ricaloglu@gmail.com">erin.ricaloglu@gmail.com</a></p>
     </div>
 
